tests/paczka1/fuzzy1/22088279.err
Error in line 3: n2EX8B0 A673 53,82
Error in line 8: n2EX8B0 S590 5,0
Error in line 28: Ab9 A927 57,9
Error in line 31: S590 S590 77,3
Error in line 32: Ab9 S555 5,8
Error in line 37: bOBha2Kn S555 200,86
Error in line 30: 6VPKX0 A927 95,4
